--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
-# Data manipulation and analysis
+# Core Data Science
 pandas>=1.5.0
 numpy>=1.21.0
-geopandas>=0.12.0
 scipy>=1.9.0
+scikit-learn>=1.2.0,<1.4.0
+
+# Ensure compatible versions for Docker
+joblib>=1.3.0,<1.4.0
+
+# High-performance processing
+dask>=2023.1.0
+dask[dataframe]>=2023.1.0
 
 # Machine Learning
-scikit-learn>=1.1.0
-tensorflow>=2.10.0
-torch>=1.12.0
+xgboost>=1.7.0
+optuna>=3.2.0
+lightgbm>=3.3.0
+catboost>=1.2.0
 
 # Optimization
 ortools>=9.4.0
@@ -15,21 +23,37 @@ pulp>=2.6.0
 
 # Visualization
 plotly>=5.10.0
-folium>=0.13.0
-dash>=2.6.0
-streamlit>=1.12.0
 matplotlib>=3.5.0
 seaborn>=0.11.0
+streamlit>=1.33.0
+streamlit-folium>=0.18.0
 
 # Geospatial
-osmnx>=1.2.0
-geopy>=2.2.0
+geopandas>=0.13.0
+osmnx>=1.6.0
+geopy>=2.3.0
+folium>=0.14.0
+pydeck>=0.8.0
+shapely>=2.0.0
+
+# Network Analysis
+networkx>=3.1.0
 
 # Data sources
 requests>=2.28.0
 beautifulsoup4>=4.11.0
+python-dotenv>=1.0.0
+
+# Configuration
+pydantic>=1.10.0
+pyyaml>=6.0
 
 # Development
 jupyter>=1.0.0
 pytest>=7.0.0
 black>=22.0.0
+
+# Utilities
+tqdm>=4.65.0
+joblib>=1.3.0
+shap>=0.44.0
